fix logo alignment in firefox

--- a/assets/css/fe-checkout.css
+++ b/assets/css/fe-checkout.css
@@ -11,6 +11,8 @@ tr.postnl-co-tr-container > td {
 	max-height: 32px;
 	width: auto;
 	margin-right: 5px;
+	vertical-align: middle;
+	display: inline-block;
 }
 
 .postnl_checkout_container {
